--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   connectivity_wrapper: ^1.1.4
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
+  device_preview_plus: any
   dio: ^5.7.0
   dropdown_search: ^6.0.1
   easy_image_viewer: ^1.5.1
@@ -69,6 +70,7 @@ dependencies:
   linear_progress_bar: ^1.1.2
 #  local_auth: ^2.3.0
   marquee: ^2.3.0
+  mobile_scanner: ^6.0.6
 #  multi_select_flutter: ^4.1.3
   nepali_date_picker: ^6.0.1
 #  page_transition: ^2.1.00
@@ -83,7 +85,7 @@ dependencies:
   shimmer: ^3.0.0
 #  syncfusion_flutter_charts: ^27.1.56
   syncfusion_flutter_sliders: ^27.1.56
-#  url_launcher: any
+  url_launcher: any
 #  webview_flutter: ^4.10.0
   workmanager: ^0.5.2
 
