--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
 #  qrscan: ^0.3.3
   riverpod: ^2.6.1
   share_plus: ^10.1.3
+  shared_preferences: ^2.5.3
   shimmer: ^3.0.0
 #  syncfusion_flutter_charts: ^27.1.56
   syncfusion_flutter_sliders: ^27.1.56
