--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   dropdown_search: ^6.0.1
   easy_image_viewer: ^1.5.1
   file_picker: ^8.1.3
-#  flutter_html: any
+#  flutter_html: ^3.0.0
   flutter_pdfview: ^1.3.4
   flutter_expandable_fab: ^2.3.0
   flutter_riverpod: ^2.6.1
@@ -87,11 +87,12 @@ dependencies:
 #  syncfusion_flutter_charts: ^27.1.56
   syncfusion_flutter_sliders: ^27.1.56
   url_launcher: any
-#  webview_flutter: ^4.10.0
+  webview_flutter: ^4.10.0
   workmanager: ^0.5.2
 
 
 
+  page_transition: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
