--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,10 @@ dependencies:
   workmanager: ^0.5.2
   printing: ^5.14.2
   htmltopdfwidgets: ^1.0.9
+  flutter_to_pdf: ^0.4.0
+  widgets_to_image: ^1.0.0
+  permission_handler: ^12.0.0+1
+  image_gallery_saver_plus: ^4.0.1
 
 
 
