--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,6 +95,7 @@ dependencies:
   widgets_to_image: ^1.0.0
   permission_handler: ^12.0.0+1
   image_gallery_saver_plus: ^4.0.1
+  dotted_border: any
 
 
 
