--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,8 +98,9 @@ dependencies:
   permission_handler: ^12.0.0+1
   image_gallery_saver_plus: ^4.0.1
   dotted_border: any
-#  khalti: ^2.0.0
-  khalti_checkout_flutter: ^1.0.0-dev.8
+  pinput: ^5.0.1
+  khalti: ^2.0.0
+#  khalti_checkout_flutter: ^1.0.0-dev.8
 
 
 
