--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
 
     <!-- Baidesik Swasthya Parikshan-->
     <application
-        android:label="Mero Swasthya Parikshan"
+        android:label="Swasthya Parikshan"
         android:name="${applicationName}"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:icon="@mipmap/launcher_icon"
